# bwa-mem2-rs

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: check.yml  publish.yml  python.yml
bwa-mem2-rs/: CHANGELOG.md  Cargo.toml  README.md
bwa-mem2-rs-cli/: CHANGELOG.md  Cargo.toml  README.md
bwa-mem2-rs-cli/src/: main.rs
bwa-mem2-rs-cli/tests/: e2e.rs  flag_parity.rs  phix_seq.rs
bwa-mem2-rs-cli/tests/common/: mod.rs
bwa-mem2-rs/src/: align.rs  error.rs  index.rs  lib.rs  opts.rs  xa.rs
bwa-mem2-rs/tests/: align_smoke.rs  cli_parity.rs  concurrency.rs  phase_split.rs
bwa-mem2-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
bwa-mem2-sys/shim/: bwa_shim.cpp  bwa_shim.h  bwa_shim_align.cpp  bwa_shim_types.h
bwa-mem3-py/: Cargo.toml  README.md  pixi.toml  pyproject.toml
bwa-mem3-py/python/bwa_mem3/: __init__.py
bwa-mem3-py/src/: lib.rs
bwa-mem3-py/tests/: test_align.py  test_smoke.py
bwa-mem3-rs/: CHANGELOG.md  Cargo.toml  README.md
bwa-mem3-rs-cli/: CHANGELOG.md  Cargo.toml  README.md
bwa-mem3-rs-cli/src/: main.rs
bwa-mem3-rs-cli/tests/: e2e.rs  flag_parity.rs
bwa-mem3-rs-cli/tests/common/: mod.rs
bwa-mem3-rs/src/: align.rs  error.rs  index.rs  lib.rs  opts.rs  shm.rs  xa.rs
bwa-mem3-rs/tests/: align_smoke.rs  cli_parity.rs  concurrency.rs  phase_split.rs  shm_lifecycle.rs
bwa-mem3-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
bwa-mem3-sys/shim/: bwa_shim.cpp  bwa_shim.h  bwa_shim_align.cpp  bwa_shim_types.h
scripts/: install-hooks.sh  refresh-bwa-mem2.sh  refresh-bwa-mem3.sh
scripts/hooks/: pre-commit
